feat: audit security and profile updates